# cjw-intercom-sink

./: Dockerfile  README.md  pyproject.toml
app/: __main__.py  intercom.py
